test/pass/codegen/std/triggers/actorFire/test.twge
block init {
    triggers {
        actorFire(actor = ActorMatch(id = "sniper"));
    }
}