test/fail/codegen/actorMatch/test.twge
block init {
    triggers {
        actorDead(actor = ActorMatch(actorId = "*"));
    }
}